# vault-family

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci-extended.yml  ci.yml  release-please.yml
crates/vault-crypto-wasm/: Cargo.toml
crates/vault-crypto-wasm/src/: lib.rs
src/: cli.rs  crypto_operations.rs  http_api.rs  lib.rs  main.rs  password_generator.rs  sqlite.rs  types.rs
src/auth/: basic_provider.rs  device_trust.rs  failed_login_tracker.rs  jwt_provider.rs  jwt_secret.rs  jwt_store.rs  jwt_types.rs  mod.rs  security_lock.rs  session_store.rs
src/crypto_operations/: fake.rs  mod.rs  tests.rs
src/http_api/: auth_handlers.rs  dto.rs  extractors.rs  handlers.rs  invite_handlers.rs  jwt.rs  jwt_secret.rs  mod.rs  shared_vault_handlers.rs  tests.rs  transfer_handlers.rs  vault_handlers.rs
src/shared/: entries.rs  error.rs  helpers.rs  invites.rs  keypair.rs  membership.rs  mod.rs  tests.rs  vault.rs
src/transfer/: error.rs  mod.rs
src/vault/: mod.rs
src/ws/: handler.rs  mod.rs  registry.rs  tickets.rs  types.rs
tools/file-stats/: Cargo.toml
tools/file-stats/src/: main.rs
