[package]
name = "vault-family"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.40"
zeroize = {  version = "1.8.1",features = ["derive"] }
rusqlite = { version = "0.34.0", features = ["bundled"] }
uuid = { version = "1.16.0", features = ["v4"] }
serde_json = "1.0.140"
ring = "0.17.14"
aes-gcm = "0.10.3"
