[package]
name = "vault-family"
version = "0.1.2"
edition = "2024"

[dependencies]
rand = "0.10.0"
serde = { version = "1.0.219", features = ["derive"] }
chrono = "0.4.40"
zeroize = {  version = "1.8.1",features = ["derive"] }
rusqlite = { version = "0.38.0", features = ["bundled"] }
uuid = { version = "1.16.0", features = ["v4"] }
serde_json = "1.0.140"
aes-gcm = "0.10.3"
hex = "0.4.3"
pbkdf2 = { version = "0.12.2", features = ["password-hash", "simple"] }
sha2 = "0.10.9"
clap = {  version = "4.5.60", features = ["derive"] }
rpassword = "7.4.0"
dirs = "6.0.0"
email_address = "0.2.9"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
axum = "0.8.8"
tower-http = { version="0.6.8", features = ["cors", "trace"] }
base64 = "0.22.1"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

