[package]
name = "vault-crypto-wasm"
version = "0.1.0"
edition = "2021"
description = "Client-side WASM crypto module for Vault Family password manager"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"

# Crypto — exact same versions as server for compatibility
aes-gcm = "0.10.3"
hex = "0.4.3"
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
pbkdf2 = { version = "0.12.2", features = ["password-hash", "simple"] }
password-hash = { version = "0.5", features = ["rand_core"] }
sha2 = "0.10.9"
zeroize = { version = "1.8.1", features = ["derive"] }

# WASM RNG backend (enables crypto.getRandomValues)
getrandom = { version = "0.2", features = ["js"] }

# Better panic messages in dev
console_error_panic_hook = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"
